src/frontend/styles/index.css
body {
    background-color: #5ba7af;
    margin: 0;
    height: 100%;
}

header {
    position: fixed;
    top: 0;
    width: 100%;
    height: 10%;
    z-index: 99;
    background-color: mediumaquamarine;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#headerLeft {
    position: relative;
    left: 2%;
    height: 100%;
    font-size: x-large;
    display: flex;
    align-items: center;
    white-space: pre;
}

#headerRight {
    position: relative;
    right: 3%;
    font-size: large;
    width: 40%;
    height: 100%;
    display: flex;
    justify-content: right;
    align-items: center;
}


#settingsGearSVG {
    width: 25px;
    height: 25px;
}

#settingsGearSVG:hover {
    cursor: pointer;
}

#settingsPane {
    background-color: white;
    position: fixed;
    top: 10%;
    width: fit-content;
}

#headerUserText {
    padding-inline: 5%;
    font-size: large;
}

#logout {
    padding: 20%;
    display: inline;
}

main {
    position: absolute;
    top: 10%;
    width: 96%; /* full width minus L/R padding */
    padding: 0 2% 0 2%;
}

#gameDisplaysArea {
    display: flex;
    width: 100%;
}

.gameDisplay {
    width: 1fr;
    padding-right: 10%;
}

#pastTttGames {
    visibility: hidden;
}

#pastChessGames {
    visibility: hidden;
}

#pastQuadGames {
    visibility: hidden;
}

.playArea {
    margin-top: 3%;
    margin-left: 1%;
}

.chessRow {
    font-size: 0; /* HTML has this weird spacing issue causing empty spaces, removing any font size fixes it */
}

.tile {
    width: 60px;
    height: 60px;
    display: inline-block;
}

.lightTile {
    background-color: hsl(25, 30%, 66%);
}

.darkTile {    
    background-color: #633e07;
}

.darkHighlightedTile {
    background-color: #ca7d2a;
}

.lightHighlightedTile {
    background-color: hsl(34, 100%, 92%);
}

.pieceImg {
    max-width: 80%;
    max-height: 80%;
    display: block;
    margin-left: 10%;
    margin-top: 10%;
    pointer-events: none;
}

#createGameDiv {
    border: 3px solid blue;
    padding: 1em;
}

#tttBoard {
    height: 400px;
    width: 400px;
    overflow: hidden;
    position: relative;
}

#octothorpe {
    position: relative;
}

.tttCell{
    overflow: hidden;
    position: absolute;
    width: 70px;
    height: 70px;
}

.activeTttCell:hover{
    background-color: grey;
}

#quadboard {
    display: grid;
    grid-template-columns: repeat(10, 10%);
    grid-template-rows: repeat(8, 12.5%);
    width: 640px;
    height: 512px;
    border: 3px solid black;
}

.quadTile {
    background-image: url('../images/quadradius/tile_1.png'); /* path is relative to this CSS file */
    background-size: 100% 100%;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
    overflow: hidden;
    border: 1px solid slategray;
}

.orb {
    background-color: #444; /* TODO use SVG for orbs instead of a solid color */
    position: absolute;
    top:    30%;
    left:   27%;
    width:  35%;
    height: 35%;
    border-radius: 50%;
}

.torus {
    height: 82%;
    width: 78%;
    top: 6.5%; /* specific proportions used to line up with tile art */
    left: 4.5%;
    position: relative;
}

.previewTorus {
    height: 50px;
    width: 50px;
}

.torusSVG {
    height: 100%;
    width: 100%;
    border-radius: 50%;
}

.torusSVGBody {
    fill: rgb(150, 150, 150);
    cx: 50%; /*cx and cy dictate location of circle's origin */
    cy: 50%;
    r: 47%; /* radius, slightly lower than 50% to account for black borders on tile */
}

.torusSVGPath {
    fill: transparent;
    stroke: black;
    stroke-width: 3px;
    stroke-opacity: 1;
}

.torusSVGPathTop {
    d: path("M 6,26 C 6,15 15,6 24,6");
}

.torusSVGPathBottom {
    d: path("M 24,45 C 31,45 43,38 43,26");
}

#chatbox { /* overall container */
    position: fixed;
    right: 10%;
    bottom: 0;
    width: 15%;
    height: 6%;
}

#chatbox-base {
    height: 100%;
    background-color: #DDDDDD;
    outline: 2px solid #1e1e49;
}

#chatbox-label {
    position: relative;
    width: 1fr;
    left: 10%;
    top: 25%;
}

#chatbox-indicator {
    position: absolute;
    top: 20%;
    right: 8%;
    background-color: #3333dd;
    color: white;
    text-align: center;
    width: 40%;
    border: 2px solid white;
    border-radius: 15% / 50%;
}

#chatbox-indicator:hover {
    box-shadow: 2px 2px black;
}

#chatbox-indicator:active {
    box-shadow: none;
    top: 22%;
    right: 6%;
}

/* possible improvement - make it slide up and down for show/hide */
#chatbox-text-area {
    position: absolute;
    right: 2.5%;
    top: -750%;
    width: 98%;
    height: 750%;
}

#chatbox-log {
    position: absolute;
    height: 86.1%;
    width: 100%;
    resize: none;
}

#chatbox-input{
    position: absolute;
    bottom: 0.5%;
    height: 10%;
    width: 100%;
    resize: none;
}

